# pyucollate

./: LICENSE  README.md  pyproject.toml
pyucollate/: __init__.py  collator.py  trie.py  utils.py
tests/: test_collator.py  test_trie.py  test_utils.py
